(library
 (name llama_frontend)
 (libraries core llama_common)
 (preprocess
  (pps ppx_jane)))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags
  (--external-tokens Token --exn-carries-state --dump))
 (explain true))

(rule
 (target errors.ml)
 (deps parser.mly parser.messages)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run menhir --compile-errors parser.messages parser.mly))))
